[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
rayon = "1.10.0"

[profile.dev]
opt-level = 1  # Some optimizations, but keeps debugging reasonable
debug = true   # Keep debug symbols
debug-assertions = true # Keep useful debug assertions
overflow-checks = false # Disable runtime integer overflow checks (optional)
lto = "off"   # Keep link-time optimizations off for faster rebuilds
panic = "unwind" # Keep backtraces for debugging
incremental = true # Enable incremental compilation

